--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,6 +17,7 @@ html {
     --light-color: #757575;
     --team-color: #F4F4FD;
     --pressed-state: #404BBF;
+    --cubik-time: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .body {
@@ -79,6 +80,7 @@ img {
     gap: 40px;
     align-items: center;
     margin-left: 76px;
+    
 }
 
 .header-nav {
@@ -110,6 +112,9 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 padding-top: 24px;
 padding-bottom: 24px;
+transition-property: color;
+transition-duration: 250ms;
+transition-timing-function: var(--cubik-time);
 }
 
 .current {
@@ -151,7 +156,9 @@ font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-    }
+transition-property: color;
+transition-duration: 250ms;
+transition-timing-function: var(--cubik-time);    }
     
 .contacts .link:hover,
 .contacts .link:focus {
@@ -200,11 +207,58 @@ letter-spacing: 0.02em;
     border-radius: 4px;
     padding: 16px 32px;
     border: none;
+    transition-property: var(--pressed-state);
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubik-time);
 }
 
 .main-button:hover,
 .main-button:focus {
     background-color: var(--pressed-state);
+}
+
+.backdrop {
+    position: fixed;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    min-width: 408px;
+    min-height: 576px;
+    background-color: #FCFCFC;
+}
+
+.modal-button {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    padding: 0;
+    width: 24px;
+    height: 24px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #E7E9FC;
+}
+
+.svg-modal {
+    fill: #000000;  
+    width: 8px;  
 }
 
 /* About */
@@ -325,7 +379,9 @@ margin-bottom: 72px;
 .item-social {
     border-radius: 50%;
     background-color: var(--button-color);
-
+    transition-property: var(--pressed-state);
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubik-time);
 }
 
 .item-social:hover,
@@ -377,6 +433,9 @@ padding-bottom: 120px;
     border: 1px solid #8E8F99;
     border-radius: 4px;
     color: #8E8F99;
+    transition-property: var(--pressed-state);
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubik-time);
 }
 
 .clients {
@@ -399,6 +458,9 @@ padding-bottom: 120px;
     width: 104px;
     height: 56px;
     fill: currentColor;
+    transition-property: var(--pressed-state);
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubik-time);
 }
 
 /* Стилі footer */
@@ -457,6 +519,9 @@ padding-bottom: 120px;
     .item-social-footer {
         border-radius: 50%;
         background-color: rgba(255, 255, 255, 0.1);
+        transition-property: #31D0AA;
+        transition-duration: 250ms;
+        transition-timing-function: var(--cubik-time);
     }
 
     .item-social-footer:hover,
