--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -552,19 +552,22 @@ padding-bottom: 120px;
 }
 
 .portfolio-button  {
-font-family: 'Roboto', sans-serif;
-cursor: pointer;
-background-color: #F4F4FD;
-color: #4D5AE5;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-border-style: solid;
-border-color: #E7E9FC;
-border-radius: 4px;
-border-width: 1px;
-height: 48px;
-padding: 12px 24px;
+    font-family: 'Roboto', sans-serif;
+    cursor: pointer;
+    background-color: #F4F4FD;
+    color: #4D5AE5;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    border-style: solid;
+    border-color: #E7E9FC;
+    border-radius: 4px;
+    border-width: 1px;
+    height: 48px;
+    padding: 12px 24px;
+    transition-property: var(--button-color);
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubik-time);
 }
 
 .portfolio-button:hover, 
@@ -584,6 +587,9 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
 
 .portfolio-item {
     background-color: #FFFFFF;
+    transition-property: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubik-time);
     }
 
     .portfolio-item:hover,
@@ -597,6 +603,28 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
         padding-bottom: 32px;
         border: 1px solid #E7E9FC;
         border-top: none;
+    }
+
+    .portfolio-overlay {
+        position: relative;
+        top: 0;
+        left: 0;
+    }
+
+    .portfolio-overlay::before {
+        display: inline-block;
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(77, 90, 229, 1);
+        opacity: 0;
+        
+    }
+
+    .portfolio-overlay:hover::before,
+    .portfolio-overlay:focus::before {
+        opacity: 1;
     }
 
 .item-title {
