--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -607,33 +607,44 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
 
     .portfolio-overlay {
         position: relative;
-        top: 0;
-        left: 0;
+        overflow: hidden;        
     }
 
-    .portfolio-overlay::before {
-        display: inline-block;
-        content: "";
+    .card-hover {
+        display: block;
+    }
+
+    .overlay-text {
         position: absolute;
+        bottom: 0;
         width: 100%;
         height: 100%;
+        transform: translate(0, 100%);
+        padding: 40px 32px 0;
         background-color: rgba(77, 90, 229, 1);
-        opacity: 0;
-        
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: var(--team-color);
+        transition-duration: 250ms;
+        transition-timing-function: var(--cubik-time);
+        padding-left: 32px;
+        padding-right: 32px;
+        padding-top: 40px;
     }
 
-    .portfolio-overlay:hover::before,
-    .portfolio-overlay:focus::before {
-        opacity: 1;
+    .card-hover:hover .overlay-text,
+    .card-hover:focus .overlay-text {
+        transform: translate(0,0);
     }
 
-.item-title {
-color: var(--top-color);
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-margin-bottom: 8px;
-}
+    .item-title {
+    color: var(--top-color);
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+    }
 
 .item-project {
 color: var(--paragraph-color);
