--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -207,7 +207,7 @@ transition-timing-function: var(--cubik-time);    }
     border-radius: 4px;
     padding: 16px 32px;
     border: none;
-    transition-property: var(--pressed-state);
+    transition-property: background-color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: var(--cubik-time);
 }
@@ -224,11 +224,18 @@ transition-timing-function: var(--cubik-time);    }
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
+    opacity: 1;
+    transition: opacity 250ms var(--cubik-time);
 }
 
 .backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50, -50) scale(0.9);
+    
 }
 
 .modal {
@@ -239,6 +246,10 @@ transition-timing-function: var(--cubik-time);    }
     min-width: 408px;
     min-height: 576px;
     background-color: #FCFCFC;
+    transform: translate(-50, -50) scale(1);
+    transition: transform 250ms var(--cubik-time);
+    opacity: 1;
+    visibility: visible;
 }
 
 .modal-button {
@@ -254,11 +265,22 @@ transition-timing-function: var(--cubik-time);    }
     height: 24px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: #E7E9FC;
+    transition-property: fill, background-color;
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubik-time);
 }
 
 .svg-modal {
     fill: #000000;  
     width: 8px;  
+}
+
+.modal-button:active {
+    background-color:var(--pressed-state);
+}
+
+.svg-modal:active {
+    fill: #FFFFFF;
 }
 
 /* About */
@@ -379,7 +401,7 @@ margin-bottom: 72px;
 .item-social {
     border-radius: 50%;
     background-color: var(--button-color);
-    transition-property: var(--pressed-state);
+    transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: var(--cubik-time);
 }
@@ -433,7 +455,7 @@ padding-bottom: 120px;
     border: 1px solid #8E8F99;
     border-radius: 4px;
     color: #8E8F99;
-    transition-property: var(--pressed-state);
+    transition-property: border-color, color;
     transition-duration: 250ms;
     transition-timing-function: var(--cubik-time);
 }
@@ -458,7 +480,7 @@ padding-bottom: 120px;
     width: 104px;
     height: 56px;
     fill: currentColor;
-    transition-property: var(--pressed-state);
+    transition-property: fill;
     transition-duration: 250ms;
     transition-timing-function: var(--cubik-time);
 }
@@ -519,7 +541,7 @@ padding-bottom: 120px;
     .item-social-footer {
         border-radius: 50%;
         background-color: rgba(255, 255, 255, 0.1);
-        transition-property: #31D0AA;
+        transition-property: background-color;
         transition-duration: 250ms;
         transition-timing-function: var(--cubik-time);
     }
@@ -565,7 +587,7 @@ padding-bottom: 120px;
     border-width: 1px;
     height: 48px;
     padding: 12px 24px;
-    transition-property: var(--button-color);
+    transition-property: background-color, border-color, color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: var(--cubik-time);
 }
@@ -587,7 +609,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
 
 .portfolio-item {
     background-color: #FFFFFF;
-    transition-property: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: var(--cubik-time);
     }
@@ -626,6 +648,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: var(--team-color);
+        transition-property: transform;
         transition-duration: 250ms;
         transition-timing-function: var(--cubik-time);
         padding-left: 32px;
